# tmp-rnd

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  address.json  cdm.json  check-balance.sh  clean-clone.sh  devcontainer-startup.sh  gen-address.sh  hardhat.config.js  index.ts  install.sh  notes.md  package.json  pnpm-lock.yaml  run.sh  setup.sh  stop.sh  test-one.sh  tsconfig.json  vite.config.ts  zombienet-simple.toml  zombienet.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
Smart-Contract-DevContainers/notes/: painpoint_dump.md
archive/dot-cli/: .gitignore  install.sh  tsconfig.json
archive/dot-cli/shims/: completion.bash  completion.fish
archive/dot-cli/src/: command-structure.ts  completion-handler.ts
archive/dot-cli/src/commands/init/scripts/: init-smartcontract.sh
archive/reputation_core/: Cargo.toml
archive/reputation_core/game/: lib.rs
archive/test-port-command/: test-port.sh
archive/test-port-command/custom/: hardhat.config.js  package.json
crates/contracts/main/: Cargo.toml  main.rs
crates/contracts/main/src/: main.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  storage.rs
custom/: package.json
examples/flipper/: Cargo.toml
examples/flipper-user/: Cargo.toml
examples/flipper-user/src/: lib.rs
examples/flipper/src/: lib.rs
examples/query-contract/: constants.ts  deploy.ts  deployer.ts  index.ts  package.json
papi-client/: package.json
papi-client/src/: check-status.ts  index.ts
pvm-contracts/: Cargo.toml
pvm-contracts/examples/flipper/: Cargo.toml
pvm-contracts/examples/flipper/src/: main.rs
pvm-contracts/pvm/: Cargo.toml
pvm-contracts/pvm-core/: Cargo.toml
pvm-contracts/pvm-core/src/: address.rs  alloc_impl.rs  host.rs  lib.rs  storage.rs
pvm-contracts/pvm-macros/: Cargo.toml
pvm-contracts/pvm-macros/src/: init.rs  lib.rs  storage.rs
pvm-contracts/pvm/src/: lib.rs
pvm-core/: Cargo.toml
pvm-core/src/: lib.rs
pvm-macros/src/: contract.rs  lib.rs
pvm/src/: lib.rs
reputation_core/: _lib.rs
reputation_core/game/: Cargo.toml
scripts/: build.sh  codegen.sh  deploy.sh  setup.sh
shims/: bun.bash  completion.bash  completion.fish  completion.zsh
src/: App.tsx  _command.ts  _index.ts  command-structure.ts  completion-handler.ts  config.rs  foo.ts  index.ts  lib.rs  main.rs  use-commander.ts
src/commands/account/scripts/: keypair.sh
src/commands/init/: index.ts
src/commands/init/scripts/: init-hardhat.sh
src/pvm-core/: Cargo.toml
src/pvm-core/src/: address.rs  alloc_impl.rs  call.rs  host.rs  lib.rs
src/pvm-macros/src/: call.rs  contract.rs  entrypoint.rs  event.rs  interface.rs  lib.rs
src/pvm/src/: lib.rs
