[workspace]
resolver = "2"
members = [
    "src/pvm",
    "src/pvm-core",
    "src/pvm-macros",
    "examples/flipper",
    "examples/flipper-user",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/parity/pvm-contracts"

[workspace.dependencies]
pvm = { path = "src/pvm" }
pvm-core = { path = "src/pvm-core" }
pvm-macros = { path = "src/pvm-macros" }
parity-scale-codec = { version = "3.6", default-features = false }
polkavm-derive = "0.30"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
