[workspace]
resolver = "2"
members = [
    "crates/utils",
    "crates/contracts/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
picoalloc = { version = "5.2", default-features = false }
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
pallet-revive-uapi = { version = "0.9", default-features = false }
polkavm-derive = "0.31"
pvm_contract = { path = "/home/ubuntu/cargo-pvm-contract/crates/pvm_contract" }
cargo-pvm-contract-builder = { path = "/home/ubuntu/cargo-pvm-contract/crates/cargo-pvm-contract-builder" }
utils = { path = "crates/utils" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = false
overflow-checks = false
