[workspace]
resolver = "2"
members = [
    "pvm",
    "pvm-core",
    "pvm-macros",
    "examples/flipper",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/parity/pvm-contracts"

[workspace.dependencies]
pvm = { path = "pvm" }
pvm-core = { path = "pvm-core" }
pvm-macros = { path = "pvm-macros" }
parity-scale-codec = { version = "3.6", default-features = false }
polkavm-derive = "0.27"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
