[package]
name = "flipper-user"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
std = []
pvm-as-dependency = []

[dependencies]
pvm = { workspace = true }
polkavm-derive = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
# Import flipper with pvm-as-dependency to avoid duplicate allocator/entry point conflicts
flipper = { path = "../flipper", default-features = false, features = ["pvm-as-dependency"] }
