[package]
name = "flipper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
std = []
# Enable this when using this contract as a dependency for cross-contract calls
pvm-as-dependency = []

[dependencies]
pvm = { workspace = true }
polkavm-derive = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
