[package]
name = "pvm-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for PVM smart contracts"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
blake2 = { version = "0.10", default-features = false }
