[package]
name = "pvm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lightweight macro framework for PVM smart contracts"

[dependencies]
pvm-core = { workspace = true }
pvm-macros = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
