[package]
name = "name-registry"
version.workspace = true
edition.workspace = true
build = "build.rs"

[[bin]]
name = "name-registry"
path = "src/main.rs"

[dependencies]
pvm_contract.workspace = true
polkavm-derive.workspace = true
utils.workspace = true
parity-scale-codec.workspace = true

[build-dependencies]
cargo-pvm-contract-builder.workspace = true
